[tool.poetry]
name = "library"
version = "0.1.0"
description = ""
authors = ["Felix <flex89@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.37"
sqlmodel = "^0.0.22"
textual = "^1.0.0"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
textual-dev = "^1.7.0"
ipython = "^8.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
